kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formiable-app
spec:
  selector:
    matchLabels:
      app: formiable-app
  replicas: 1
  template:
    metadata:
      labels:
        app: formiable-app
    spec:
      containers:
        - name: dashboard
          image: tomseimandi/formiable:latest
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "5Gi"
              cpu: "10000m"
